<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/key_line_2"
        android:contentDescription="@string/content_logo"
        android:src="@drawable/vec_logo"/>

    <LinearLayout
        android:id="@+id/ll_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/btn_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/key_line_1"
            android:text="@string/play"
            android:textAllCaps="true"
            android:textColor="@drawable/sel_white"
            android:textSize="@dimen/text_large"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/btn_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/key_line_1"
            android:text="@string/new_game"
            android:textAllCaps="true"
            android:textColor="@drawable/sel_white"
            android:textSize="@dimen/text_large"
            android:layout_weight="1"
            android:visibility="gone"/>
    </LinearLayout>

    <TextView
        android:id="@+id/btn_leaderboards"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/key_line_1"
        android:text="@string/leaderboards"
        android:textAllCaps="true"
        android:textColor="@drawable/sel_white"
        android:textSize="@dimen/text_large"/>
</LinearLayout>
