<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/key_line_1"
    android:background="@color/light_blue_500"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/image"
        android:layout_width="@dimen/icon_size_big"
        android:layout_height="@dimen/icon_size_big"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/key_line_1"
        android:layout_marginTop="@dimen/key_line_1"
        android:background="@android:color/transparent"
        android:contentDescription="@string/content_bubbles"
        app:srcCompat="@drawable/vec_bubbles"/>

    <TextView
        android:id="@+id/tv_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/key_line_1"
        android:layout_marginEnd="@dimen/key_line_1"
        android:layout_marginStart="@dimen/key_line_1"
        android:background="@android:color/transparent"
        android:drawableEnd="@drawable/vec_info"
        android:drawablePadding="@dimen/key_line_1_d2"
        android:drawableRight="@drawable/vec_info"
        android:gravity="center"
        android:padding="@dimen/key_line_1_d2"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/text_big"
        tools:text="Your score: 327600"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/btn_negative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/light_blue_700"
            android:gravity="center"
            android:padding="@dimen/key_line_1"
            android:text="@string/exit"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/text_big"/>

        <TextView
            android:id="@+id/btn_positive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/light_blue_600"
            android:gravity="center"
            android:padding="@dimen/key_line_1"
            android:text="@string/replay"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/text_big"/>
    </LinearLayout>

</LinearLayout>